# polymarket_rust_framework

./: .gitignore  Cargo.toml  automerger_relay.py  daily_half_hourly_variance_profiles_1m.json  relay_converter.py
src/: accounts.rs  config.rs  credentials.rs  main.rs  popular_tokens.rs
src/clob_client/: builder.rs  client.rs  clob_auth.rs  clob_types.rs  constants.rs  eip712.rs  eip712struct.rs  endpoints.rs  headers.rs  hmac.rs  http_helpers.rs  mod.rs  prebuilt_order.rs  signer.rs  utils.rs
src/exchange_listeners/: autodiscover_markets.rs  crypto_listeners.rs  crypto_models.rs  event_processor.rs  mod.rs  poly_client.rs  poly_listeners.rs  poly_models.rs  states.rs
src/exchange_listeners/orderbooks/: crypto_orderbook.rs  mod.rs  poly_orderbook.rs
src/marketmaking/: allowance.rs  maker_taker_config.rs  marketmakingclient.rs  mod.rs  poly_get_markets.rs  poly_market_struct.rs
src/poly_orderbooks/: mod.rs  poly_client_orders.rs
src/strategies/: hourly_btc.rs  koen_strategy.rs  mod.rs  pricing.rs  strategy.rs  strategy_utils.rs
src/strategies/app_state_updates/: mod.rs  update_crypto_orderbooks.rs  update_crypto_prices.rs
src/strategies/custom/: mod.rs
src/strategies/custom/koen/: koen_strategy.rs  mod.rs
src/strategies/custom/negrisk/: maker_taker_config.rs  mod.rs  negrisk_no_maker_strategy.rs  utils.rs
src/strategies/logging/: bbo_logging.rs  crypto_logging.rs  main_logging.rs  mod.rs  order_logging.rs  position_logging.rs  trade_logging.rs
src/strategies/poly_state_updates/: mod.rs  update_orderbooks.rs  update_orders.rs  update_positions.rs
(+6 files in other folders)
