[package]
name = "polymarket"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.5"
tiny-keccak = "2.0.0"
tokio = { version = "1.41.1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls", "rustls-tls-webpki-roots"] }
futures-util = "0.3.31"
url = "2.5.3"
ethers = "2.0.14"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22.1"
reqwest = {version = "0.12.15", default-features=false, features = ["json", "rustls-tls", "http2", "cookies"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
hex = "0.4"
chrono = "0.4"
chrono-tz = "0.8"
rand = "0.8.5"
dashmap = "6.1.0"
futures = "0.3.31"
simd-json = "0.14.1"
num_cpus = "1.16.0"
tokio-rustls = "0.23"
rustls = "0.20"
webpki-roots = "0.22"
itertools = "0.14.0"
ordered-float = { version = "5.0.0", features = ["serde"] }
rayon = "1.10.0"

log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
bstr = "1.9"
atomic_float = "1.0"
tokio-util = "0.7.16"

    
rust_decimal = { version = "1.33", features = ["maths"] }
rust_decimal_macros = "1.33"
statrs = "0.17"
roots = "0.0.8"
argmin = "0.8.1"
argmin-math = { version = "0.3.0", features = ["nalgebra_latest"] }
nalgebra = { version = "0.32", features = ["serde-serialize"] }
num-traits = "0.2"
async-trait = "0.1"
uuid = { version = "1.6", features = ["v4"] }
tap = "1.0.1"

  